# mp2-lab3-stack

./: CMakeLists.txt  README.md
formulalib/: CMakeLists.txt  tformula.cpp  tformula.h
samples/: CMakeLists.txt  sample_formula.cpp  sample_stack.cpp
stacklib/: CMakeLists.txt  tstack.h
test/: CMakeLists.txt  test_formula.cpp  test_stack.cpp
